--- a/source/_posts/圆环上随机取3个点组成一个锐角三角形的概率.md
+++ b/source/_posts/圆环上随机取3个点组成一个锐角三角形的概率.md
@@ -13,17 +13,17 @@ abbrlink: 63520
 date: 2019-04-18 13:40:45
 ---
 
-## 1. 问题
+## 问题
 > 在一个圆环上随机取3点，求这3个点组成一个锐角三角形的概率
 
-## 2. 题解
+## 题解
 如下图所示：
 ![图 1](https://i.loli.net/2019/04/18/5cb7da63b7766.png)
 
 取单位圆上任意两点点A和B，A、B两点确定以后，点A、B、C三点要够成锐角三角形，点C必须在DE之间，否在将构成钝角三角形。设AB弧所对应的圆心角为$\theta$,则当且仅当$\theta \in (0, \pi)$ 时有可能构成锐角三角形。$\theta$ 的概率密度是 $\frac{1}{\pi}$，此时组成锐角三角形需要C点在AB对应的DE段间的概率是 $\frac{\theta}{2\pi}$。故在一个圆环上随机添加3点，三个点组成一个锐角三角形的概率为
 > $\int_0^\pi \frac{1}{\pi}\cdot\frac{\theta}{2\pi}\mathrm{d}\theta = \frac{\theta ^ 2}{4\pi ^ 2}\bigg|_0^\pi = \frac{1}{4}$
 
-## 3. Python代码模拟
+## Python代码模拟
 ```python
 #! /usr/bin/env python
 # -*- coding: utf-8 -*-
