--- a/source/_posts/自助法.md
+++ b/source/_posts/自助法.md
@@ -20,7 +20,7 @@ date: 2019-04-27 10:24:51
 上面我们提到，在自助法的采样过程中，有的样本可能从来都没有被采样过。那么，对m个样本进行m次自助抽样，当m趋于无穷大时，最终有多少数据从未被选择过？
 很显然，在一次采样过程中，被采样到的概率是 $\frac{1}{m}$，则没有被采样到的概率是 $(1-\frac{1}{m})$，m次采样均未被采样到的概率为 $(1-\frac{1}{m})^m$，当m趋于无穷大时，概率为 $\lim\limits_{x \to \infty}{(1-\frac{1}{m})^m}$。即
 $$\lim\limits_{x \to \infty}{(1-\frac{1}{m})^m} = \lim\limits_{x \to \infty}{(1+\frac{1}{-m})^{-m \times (-1)}} = {e^{-1}} \approx 0.368$$
-也就是说，大约有 $36.8\%$ 的样本一次都没被采样过。
+所以，大约有 $36.8\%$ 的样本一次都没被采样过。
 
 ## Python 代码模拟
 ```python
